Word of the day, gets a new random word each day.
Stores the last obtained word & date in localstorage.

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -23,7 +23,7 @@
 
     <script src="_framework/blazor.webassembly.js"></script>
 
-    <script>
+    <!-- <script>
         if ('serviceWorker' in navigator) {
             console.log('Registering service worker now');
             navigator.serviceWorker.register('/serviceworker.js')
@@ -31,7 +31,7 @@
                     console.log('Service Worker Registered');
                 });
         }
-    </script>
+    </script> -->
 </body>
 
 </html>
